deployments/k8s/OnPrem/full-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reaperc2-ns
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: reaperc2-ns
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: reaperc2-ns
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongodb/mongodb-community-server:latest
          # args: ["--dbpath","/data/mongodb"]
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage-deployment
              mountPath: /data/db
      volumes:
        - name: mongo-storage-deployment
          persistentVolumeClaim:
            claimName: mongo-pvc
      imagePullSecrets:
      - name: reaperc2-myregistrykey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reaperc2-deployment
  namespace: reaperc2-ns
  labels:
    app: reaperc2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reaperc2-deployment
  template:
    metadata:
      labels:
        app: reaperc2-deployment
    spec:
      containers:
        - name: reaperc2-deployment
          image: registry.reaper-ut.com/reaperc2:latest
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: reaperc2-myregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: reaperc2-service
  namespace: reaperc2-ns
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: reaperc2-deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reaperc2-ingress
  namespace: reaperc2-ns
  annotations:
    #kubernetes.io/ingress.class: "traefik"
    acme.cert-manager.io/http01-edit-in-place: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  rules:
  - host: yoursubdomain.yourrootdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reaperc2-service
            port:
              number: 8080
  - host: yoursubdomain.yourrootdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reaperc2-service
            port:
              number: 8080
  tls:
  - hosts:
    - yoursubdomain.yourrootdomain.com
    secretName: c2-reaperc2-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reaperc2-ingressroute
  namespace: reaperc2-ns
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`yoursubdomain.yourrootdomain.com`)
      kind: Rule
      services:
        - name: reaperc2-service
          port: 8080
  tls:
    certResolver: letsencrypt
